Hidden scrollbar - fixed broken layout

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,11 @@ body {
   flex: 1;
 }
 
+::-webkit-scrollbar {
+  width: 0px; /* remove scrollbar space */
+  background: transparent; /* optional: just make scrollbar invisible */
+}
+
 #root {
   flex: 1;
   display: flex;
